Hindi added in navbar v2

--- a/categories/templates/categories/navbar.html
+++ b/categories/templates/categories/navbar.html
@@ -336,8 +336,8 @@
                         <img src="{% static 'categories/images/banner/menu-banner.jpg' %}" alt="eCommerce HTML Template"
                           class="img-fluid">
                         <div class="position-absolute ps-6 mt-8">
-                          <h5 class=" mb-0 ">Dont miss this <br>offer today.</h5>
-                          <a href="#" class="btn btn-primary btn-sm mt-3">Shop Now</a>
+                          <h5 class=" mb-0 ">{% translate "Dont miss this" %} <br>{% translate "offer today." %}</h5>
+                          <a href="#" class="btn btn-primary btn-sm mt-3">{% translate "Shop Now"}</a>
                         </div>
                       </div>
                     </div>
@@ -347,50 +347,50 @@
               <li class="nav-item dropdown w-100 w-lg-auto">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  Pages
+                  {% translate "Pages" %}
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../../pages/blog.html">Blog</a></li>
-                  <li><a class="dropdown-item" href="../../pages/blog-single.html">Blog Single</a></li>
-                  <li><a class="dropdown-item" href="../../pages/blog-category.html">Blog Category</a></li>
-                  <li><a class="dropdown-item" href="../../pages/about.html">About us</a></li>
-                  <li><a class="dropdown-item" href="../../pages/404error.html">404 Error</a></li>
-                  <li><a class="dropdown-item" href="../../pages/contact.html">Contact</a></li>
+                  <li><a class="dropdown-item" href="../../pages/blog.html">{% translate "Blog" %}</a></li>
+                  <li><a class="dropdown-item" href="../../pages/blog-single.html">{% translate "Blog Single" %}</a></li>
+                  <li><a class="dropdown-item" href="../../pages/blog-category.html">{% translate "Blog Category" %}</a></li>
+                  <li><a class="dropdown-item" href="../../pages/about.html">{% translate "About us" %}</a></li>
+                  <li><a class="dropdown-item" href="../../pages/404error.html">{% translate "404 Error" %}</a></li>
+                  <li><a class="dropdown-item" href="../../pages/contact.html">{% translate "Contact" %}</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown w-100 w-lg-auto">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  Account
+                  {% translate "Account" %}
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../../pages/signin.html">Sign in</a></li>
-                  <li><a class="dropdown-item" href="../../pages/signup.html">Signup</a></li>
-                  <li><a class="dropdown-item" href="../../pages/forgot-password.html">Forgot Password</a></li>
+                  <li><a class="dropdown-item" href="../../pages/signin.html">{% translate "Sign in" %}</a></li>
+                  <li><a class="dropdown-item" href="../../pages/signup.html">{% translate "Signup" %}</a></li>
+                  <li><a class="dropdown-item" href="../../pages/forgot-password.html">{% translate "Forgot Password" %}</a></li>
                   <li class="dropdown-submenu dropend">
                     <a class="dropdown-item dropdown-list-group-item dropdown-toggle" href="#">
-                      My Account
+                      {% translate "My Account" %}
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../../pages/account-orders.html">Orders</a></li>
-                      <li><a class="dropdown-item" href="../../pages/account-settings.html">Settings</a></li>
-                      <li><a class="dropdown-item" href="../../pages/account-address.html">Address</a></li>
-                      <li><a class="dropdown-item" href="../../pages/account-payment-method.html">Payment Method</a>
+                      <li><a class="dropdown-item" href="../../pages/account-orders.html">{% translate "Orders" %}</a></li>
+                      <li><a class="dropdown-item" href="../../pages/account-settings.html">{% translate "Settings" %}</a></li>
+                      <li><a class="dropdown-item" href="../../pages/account-address.html">{% translate "Address" %}</a></li>
+                      <li><a class="dropdown-item" href="../../pages/account-payment-method.html">{% translate "Payment Method" %}</a>
                       </li>
-                      <li><a class="dropdown-item" href="../../pages/account-notification.html">Notification</a></li>
+                      <li><a class="dropdown-item" href="../../pages/account-notification.html">{% translate "Notification" %}</a></li>
                     </ul>
                   </li>
                 </ul>
               </li>
               <li class="nav-item w-100 w-lg-auto">
                 <a class="nav-link" href="../../dashboard/index.html">
-                  Dashboard
+                  {% translate "Dashboard" %}
                 </a>
               </li>
               <li class="nav-item dropdown w-100 w-lg-auto dropdown-flyout">
                 <a class="nav-link" href="#" id="navbarDropdownDocs" role="button" data-bs-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
-                  Docs
+                  {% translate "Docs" %}
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarDropdownDocs">
                   <a class="dropdown-item align-items-start" href="../../docs/index.html">
@@ -404,9 +404,9 @@
                       </svg>
                     </div>
                     <div class="ms-3 lh-1">
-                      <h6 class="mb-1">Documentations</h6>
+                      <h6 class="mb-1">{% translate "Documentations" %}</h6>
                       <p class="mb-0 small">
-                        Browse the all documentation
+                        {% translate "Browse the all documentation" %}
                       </p>
                     </div>
                   </a>
@@ -420,9 +420,9 @@
                     </div>
                     <div class="ms-3 lh-1">
                       <h6 class="mb-1">
-                        Changelog <span class="text-primary ms-1">v1.3.0</span>
+                        {% translate "Changelog" %} <span class="text-primary ms-1">v1.3.0</span>
                       </h6>
-                      <p class="mb-0 small">See what's new</p>
+                      <p class="mb-0 small">{% translate "See what's new" %}</p>
                     </div>
                   </a>
                 </div>
