--- a/categories/templates/categories/category.html
+++ b/categories/templates/categories/category.html
@@ -1,10 +1,11 @@
 <!-- Category Section Start-->
 {% load static %}
+{% load i18n %}
  <section class="mb-lg-10 mt-lg-14 my-8">
     <div class="container">
        <div class="row">
           <div class="col-12 mb-6">
-             <h3 class="mb-0">Featured Categories</h3>
+             <h3 class="mb-0">{% translate "Featured Categories" %}</h3>
           </div>
        </div>
        <div class="category-slider">
