--- a/categories/templates/categories/footer.html
+++ b/categories/templates/categories/footer.html
@@ -1,37 +1,38 @@
 {% load static %}
+{% load i18n %}
 <!-- footer -->
 <footer class="footer">
    <div class="container">
       <div class="row g-4 py-4">
          <div class="col-12 col-md-12 col-lg-4">
-            <h6 class="mb-4">Categories</h6>
+            <h6 class="mb-4">{% translate "Categories" %}</h6>
             <div class="row">
                <div class="col-6">
                   <!-- list -->
                   <ul class="nav flex-column">
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Vegetables & Fruits</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Breakfast & instant food</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Bakery & Biscuits</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Atta, rice & dal</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Sauces & spreads</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Organic & gourmet</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Baby care</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Cleaning essentials</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Personal care</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Vegetables & Fruits" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Breakfast & instant food" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Bakery & Biscuits" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Atta, rice & dal" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Sauces & spreads" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Organic & gourmet" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Baby care" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Cleaning essentials" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Personal care" %}</a></li>
                   </ul>
                </div>
                <div class="col-6">
                   <!-- list -->
                   <ul class="nav flex-column">
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Dairy, bread & eggs</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Cold drinks & juices</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Tea, coffee & drinks</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Masala, oil & more</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Chicken, meat & fish</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Paan corner</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Pharma & wellness</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Home & office</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Pet care</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Dairy, bread & eggs" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Cold drinks & juices" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Tea, coffee & drinks" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Masala, oil & more" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Chicken, meat & fish" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Paan corner" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Pharma & wellness" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Home & office" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Pet care" %}</a></li>
                   </ul>
                </div>
             </div>
@@ -39,47 +40,47 @@
          <div class="col-12 col-md-12 col-lg-8">
             <div class="row g-4">
                <div class="col-6 col-sm-6 col-md-3">
-                  <h6 class="mb-4">Get to know us</h6>
+                  <h6 class="mb-4">{% translate "Get to know us" %}</h6>
                   <!-- list -->
                   <ul class="nav flex-column">
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Company</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">About</a></li>
-                     <li class="nav-item mb-2"><a href="#1" class="nav-link">Blog</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Help Center</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Our Value</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Company" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "About" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#1" class="nav-link">{% translate "Blog" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Help Center" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Our Value" %}</a></li>
                   </ul>
                </div>
                <div class="col-6 col-sm-6 col-md-3">
-                  <h6 class="mb-4">For Consumers</h6>
+                  <h6 class="mb-4">{% translate "For Consumers" %}</h6>
                   <ul class="nav flex-column">
                      <!-- list -->
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Payments</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Shipping</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Product Returns</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">FAQ</a></li>
-                     <li class="nav-item mb-2"><a href="./pages/shop-checkout.html" class="nav-link">Shop Checkout</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Payments" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Shipping" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Product Returns" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "FAQ" %}</a></li>
+                     <li class="nav-item mb-2"><a href="./pages/shop-checkout.html" class="nav-link">{% translate "Shop Checkout" %}</a></li>
                   </ul>
                </div>
                <div class="col-6 col-sm-6 col-md-3">
-                  <h6 class="mb-4">Become a Shopper</h6>
+                  <h6 class="mb-4">{% translate "Become a Shopper" %}</h6>
                   <ul class="nav flex-column">
                      <!-- list -->
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Shopper Opportunities</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Become a Shopper</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Earnings</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Ideas & Guides</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">New Retailers</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Shopper Opportunities" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Become a Shopper" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Earnings" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Ideas & Guides" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "New Retailers" %}</a></li>
                   </ul>
                </div>
                <div class="col-6 col-sm-6 col-md-3">
-                  <h6 class="mb-4">FarmDirect programs</h6>
+                  <h6 class="mb-4">{% translate "FarmDirect programs" %}</h6>
                   <ul class="nav flex-column">
                      <!-- list -->
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">FarmDirect programs</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Gift Cards</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Promos & Coupons</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">FarmDirect Ads</a></li>
-                     <li class="nav-item mb-2"><a href="#!" class="nav-link">Careers</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "FarmDirect programs" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Gift Cards" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Promos & Coupons" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "FarmDirect Ads" %}</a></li>
+                     <li class="nav-item mb-2"><a href="#!" class="nav-link">{% translate "Careers" %}</a></li>
                   </ul>
                </div>
             </div>
@@ -89,7 +90,7 @@
          <div class="row align-items-center">
             <div class="col-lg-5 text-lg-start text-center mb-2 mb-lg-0">
                <ul class="list-inline mb-0">
-                  <li class="list-inline-item text-dark">Payment Partners</li>
+                  <li class="list-inline-item text-dark">{% translate "Payment Partners" %}</li>
                   <li class="list-inline-item">
                      <a href="#!"><img src="../static/images/payment/amazonpay.svg" alt="" /></a>
                   </li>
@@ -109,7 +110,7 @@
             </div>
             <div class="col-lg-7 mt-4 mt-md-0">
                <ul class="list-inline mb-0 text-lg-end text-center">
-                  <li class="list-inline-item mb-2 mb-md-0 text-dark">Get deliveries with FarmDirect</li>
+                  <li class="list-inline-item mb-2 mb-md-0 text-dark">{% translate "Get deliveries with FarmDirect" %}</li>
                   <li class="list-inline-item ms-4">
                      <a href="#!"><img src="../static/images/appbutton/appstore-btn.svg" alt="" style="width: 140px" /></a>
                   </li>
