--- a/categories/templates/categories/location.html
+++ b/categories/templates/categories/location.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!-- Modal Location-->
 <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
 <div class="modal-dialog modal-sm modal-dialog-centered">
@@ -27,34 +28,34 @@
 
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action active">
-              <span>Anand</span><span>Min:&#8377;20</span></a>
+              <span>{% translate "Anand" %}</span><span>Min:&#8377;20</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>Ahmedabad</span><span>Min:&#8377;30</span></a>
+              <span>{% translate "Ahmedabad" %}</span><span>Min:&#8377;30</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>Vadodra</span><span>Min:&#8377;50</span></a>
+              <span>{% translate "Vadodra" %}</span><span>Min:&#8377;50</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>Nadiad</span><span>Min:&#8377;29</span></a>
+              <span>{% translate "Nadiad" %}</span><span>Min:&#8377;29</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>Surat</span><span>Min:&#8377;80</span></a>
+              <span>{% translate "Surat" %}</span><span>Min:&#8377;80</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>Bharuch</span><span>Min:&#8377;90</span></a>
+              <span>{% translate "Bharuch" %}</span><span>Min:&#8377;90</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>valsad</span><span>Min:&#8377;50</span></a>
+              <span>{% translate "Valsad" %}</span><span>Min:&#8377;50</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>Rajkot</span><span>Min:&#8377;29</span></a>
+              <span>{% translate "Rajkot" %}</span><span>Min:&#8377;29</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>Daman</span><span>Min:&#8377;80</span></a>
+              <span>{% translate "Junagadh" %}</span><span>Min:&#8377;80</span></a>
             <a href="#"
               class="list-group-item d-flex justify-content-between align-items-center px-2 py-3 list-group-item-action">
-              <span>Gandhinagar</span><span>Min:&#8377;90</span></a>
+              <span>{% translate "Gandhinagar" %}</span><span>Min:&#8377;90</span></a>
           </div>
         </div>
       </div>
