--- a/categories/templates/categories/login.html
+++ b/categories/templates/categories/login.html
@@ -1,4 +1,6 @@
 <!-- Modal SignUp/In-->
+{% load static %}
+{% load i18n %}
 <div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
 <div class="modal-dialog modal-dialog-centered">
   <div class="modal-content p-4">
@@ -10,27 +12,27 @@
     <div class="modal-body">
       <form>
         <div class="mb-3">
-          <label for="fullName" class="form-label">Name</label>
+          <label for="fullName" class="form-label">{% translate "Name" %}</label>
           <input type="text" class="form-control" id="fullName" placeholder="Enter Your Name" required="">
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
+          <label for="email" class="form-label">{% translate "Email address" %}</label>
           <input type="email" class="form-control" id="email" placeholder="Enter Email address" required="">
         </div>
 
         <div class="mb-5">
-          <label for="password" class="form-label">Password</label>
+          <label for="password" class="form-label">{% translate "Password" %}</label>
           <input type="password" class="form-control" id="password" placeholder="Enter Password" required="">
-          <small class="form-text">By Signup, you agree to our <a href="#!">Terms of Service</a> & <a
+          <small class="form-text">{% translate "By Signup, you agree to our" %} <a href="#!">{% translate "Terms of Service" %}</a> & <a
               href="#!">Privacy Policy</a></small>
         </div>
 
-        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <button type="submit" class="btn btn-primary">{% translate "Sign Up" %}</button>
       </form>
     </div>
     <div class="modal-footer border-0 justify-content-center">
 
-      Already have an account? <a href="#">Sign in</a>
+      Already have an account? <a href="#">{% translate "Sign in" %}</a>
     </div>
   </div>
 </div>
