Hindi added in navbar v3

--- a/categories/templates/categories/index.html
+++ b/categories/templates/categories/index.html
@@ -885,8 +885,8 @@
                </ul>
                <!-- btn -->
                <div class="d-flex justify-content-between mt-4">
-                  <a href="#!" class="btn btn-primary">Continue Shopping</a>
-                  <a href="#!" class="btn btn-dark">Update Cart</a>
+                  <a href="#!" class="btn btn-primary">{% translate "Continue Shopping" %}</a>
+                  <a href="#!" class="btn btn-dark">{% translate "Update Cart" %}</a>
                </div>
             </div>
          </div>
@@ -899,8 +899,8 @@
                <div class="modal-body p-6">
                   <div class="d-flex justify-content-between align-items-start">
                      <div>
-                        <h5 class="mb-1" id="locationModalLabel">Choose your Delivery Location</h5>
-                        <p class="mb-0 small">Enter your address and we will specify the offer you area.</p>
+                        <h5 class="mb-1" id="locationModalLabel">{% translate "Choose your Delivery Location" %}</h5>
+                        <p class="mb-0 small">{% translate "Enter your address and we will specify the offer you area." %}</p>
                      </div>
                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
@@ -908,8 +908,8 @@
                      <input type="search" class="form-control" placeholder="Search your area" />
                   </div>
                   <div class="d-flex justify-content-between align-items-center mb-2">
-                     <h6 class="mb-0">Select Location</h6>
-                     <a href="#" class="btn btn-outline-gray-400 text-muted btn-sm">Clear All</a>
+                     <h6 class="mb-0">{% translate "Select Location" %}</h6>
+                     <a href="#" class="btn btn-outline-gray-400 text-muted btn-sm">{% translate "Clear All" %}</a>
                   </div>
                   <div>
                      <div data-simplebar style="height: 300px">
@@ -970,10 +970,10 @@
                <div class="hero-slider">
                   <div style="background: url(./assets/images/slider/slide-1.jpg) no-repeat; background-size: cover; border-radius: 0.5rem; background-position: center">
                      <div class="ps-lg-12 py-lg-16 col-xxl-5 col-md-7 py-14 px-8 text-xs-center">
-                        <span class="badge text-bg-warning">Opening Sale Discount 50%</span>
+                        <span class="badge text-bg-warning">{% translate "Opening Sale Discount 50%" %}</span>
 
-                        <h2 class="text-dark display-5 fw-bold mt-4">SuperMarket For Fresh Grocery</h2>
-                        <p class="lead">Introduced a new model for online grocery shopping and convenient home delivery.</p>
+                        <h2 class="text-dark display-5 fw-bold mt-4">{% translate "SuperMarket For Fresh Grocery" %}</h2>
+                        <p class="lead">{% translate "Introduced a new model for online grocery shopping and convenient home delivery." %}</p>
                         <a href="#!" class="btn btn-dark mt-3">
                            Shop Now
                            <i class="feather-icon icon-arrow-right ms-1"></i>
@@ -982,14 +982,14 @@
                   </div>
                   <div style="background: url(./assets/images/slider/slider-2.jpg) no-repeat; background-size: cover; border-radius: 0.5rem; background-position: center">
                      <div class="ps-lg-12 py-lg-16 col-xxl-5 col-md-7 py-14 px-8 text-xs-center">
-                        <span class="badge text-bg-warning">Free Shipping - orders over $100</span>
+                        <span class="badge text-bg-warning">{% translate "Free Shipping - orders over $100" %}</span>
                         <h2 class="text-dark display-5 fw-bold mt-4">
                            Free Shipping on
                            <br />
                            orders over
                            <span class="text-primary">$100</span>
                         </h2>
-                        <p class="lead">Free Shipping to First-Time Customers Only, After promotions and discounts are applied.</p>
+                        <p class="lead">{% translate "Free Shipping to First-Time Customers Only, After promotions and discounts are applied." %}</p>
                         <a href="#!" class="btn btn-dark mt-3">
                            Shop Now
                            <i class="feather-icon icon-arrow-right ms-1"></i>
@@ -1005,7 +1005,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-12 mb-6">
-                     <h3 class="mb-0">Featured Categories</h3>
+                     <h3 class="mb-0">{% translate "Featured Categories" %}</h3>
                   </div>
                </div>
                <div class="category-slider">
@@ -1014,7 +1014,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-dairy-bread-eggs.jpg" alt="Grocery Ecommerce Template" class="mb-3 img-fluid" />
-                              <div class="text-truncate">Dairy, Bread & Eggs</div>
+                              <div class="text-truncate">{% translate "Dairy, Bread & Eggs" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1024,7 +1024,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-snack-munchies.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Snack & Munchies</div>
+                              <div class="text-truncate">{% translate "Snack & Munchies" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1034,7 +1034,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-bakery-biscuits.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Bakery & Biscuits</div>
+                              <div class="text-truncate">{% translate "Bakery & Biscuits" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1044,7 +1044,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-instant-food.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Instant Food</div>
+                              <div class="text-truncate">{% translate "Instant Food" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1054,7 +1054,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-tea-coffee-drinks.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Tea, Coffee & Drinks</div>
+                              <div class="text-truncate">{% translate "Tea, Coffee & Drinks" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1064,7 +1064,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-atta-rice-dal.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Atta, Rice & Dal</div>
+                              <div class="text-truncate">{% translate "Atta, Rice & Dal" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1075,7 +1075,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-baby-care.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Baby Care</div>
+                              <div class="text-truncate">{% translate "Baby Care" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1085,7 +1085,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-chicken-meat-fish.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Chicken, Meat & Fish</div>
+                              <div class="text-truncate">{% translate "Chicken, Meat & Fish" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1095,7 +1095,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-cleaning-essentials.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Cleaning Essentials</div>
+                              <div class="text-truncate">{% translate "Cleaning Essentials" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1105,7 +1105,7 @@
                         <div class="card card-product mb-lg-4">
                            <div class="card-body text-center py-8">
                               <img src="assets/images/category/category-pet-care.jpg" alt="Grocery Ecommerce Template" class="mb-3" />
-                              <div class="text-truncate">Pet Care</div>
+                              <div class="text-truncate">{% translate "Pet Care" %}</div>
                            </div>
                         </div>
                      </a>
@@ -1121,7 +1121,7 @@
                      <div>
                         <div class="py-10 px-8 rounded" style="background: url(./assets/images/banner/grocery-banner.png) no-repeat; background-size: cover; background-position: center">
                            <div>
-                              <h3 class="fw-bold mb-1">Fruits & Vegetables</h3>
+                              <h3 class="fw-bold mb-1">{% translate "Fruits & Vegetables" %}</h3>
                               <p class="mb-4">
                                  Get Upto
                                  <span class="fw-bold">30%</span>
@@ -1136,13 +1136,13 @@
                      <div>
                         <div class="py-10 px-8 rounded" style="background: url(./assets/images/banner/grocery-banner-2.jpg) no-repeat; background-size: cover; background-position: center">
                            <div>
-                              <h3 class="fw-bold mb-1">Freshly Baked Buns</h3>
+                              <h3 class="fw-bold mb-1">{% translate "Freshly Baked Buns" %}</h3>
                               <p class="mb-4">
                                  Get Upto
                                  <span class="fw-bold">25%</span>
                                  Off
                               </p>
-                              <a href="#!" class="btn btn-dark">Shop Now</a>
+                              <a href="#!" class="btn btn-dark">{% translate "Shop Now" %}</a>
                            </div>
                         </div>
                      </div>
@@ -1155,7 +1155,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-12 mb-6">
-                     <h3 class="mb-0">Popular Products</h3>
+                     <h3 class="mb-0">{% translate "Popular Products" %}</h3>
                   </div>
                </div>
 
@@ -1165,7 +1165,7 @@
                         <div class="card-body">
                            <div class="text-center position-relative">
                               <div class="position-absolute top-0 start-0">
-                                 <span class="badge bg-danger">Sale</span>
+                                 <span class="badge bg-danger">{% translate "Sale" %}</span>
                               </div>
                               <a href="#!"><img src="assets/images/products/product-img-1.jpg" alt="Grocery Ecommerce Template" class="mb-3 img-fluid" /></a>
 
@@ -1288,7 +1288,7 @@
                               </div>
                            </div>
                            <div class="text-small mb-1">
-                              <a href="#!" class="text-decoration-none text-muted"><small>Bakery & Biscuits</small></a>
+                              <a href="#!" class="text-decoration-none text-muted"><small>{% translate "Bakery & Biscuits" %}</small></a>
                            </div>
                            <h2 class="fs-6"><a href="./pages/shop-single.html" class="text-inherit text-decoration-none">Cadbury 5 Star Chocolate</a></h2>
                            <div class="text-warning">
